[package]
name = "RCON2"
version = "0.1.4"
description = "Rcon integration"
authors = ["Ozy_Viking<admin@hankin.io>"]
license = ""
repository = "https://github.com/JDPlays-Madhouse/RCON2.0"
edition = "2021"
resolver = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lib]
name = "rcon2"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }


[dependencies]
anyhow = "1.0.91"
async-std = { version = "1.13.0", features = ["attributes"] }
async-trait = { version = "0.1.83"}
cached = { version = "0.54.0", features = ["disk_store"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
config = { version = "0.14.1", features = ["preserve_order", "toml"] }
crypto_hmac = { package = "hmac", version = "0.12.1"}
dirs = "5.0.1"
futures = "0.3.31"
http = "1.1.0"
hyper = "1.5.0"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
libc = "0.2.161"
log = "0.4.22"
num_threads = "0.1.7"
rcon = { version = "0.6.0", features = ["async-std", "rt-async-std", "rt-tokio"] }
reqwest = { version = "0.12.9", features = ["json"] }
rpassword = "7.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.132"
sha2 = "0.10.8"
simple-server = "0.4.0"
sled = "0.34.7"
tauri = { version = "2.0.6", features = ["tracing"] }
tauri-plugin-websocket = "2"
thiserror = "2.0.0"
time = { version = "0.3.36", features = ["local-offset", "formatting", "parsing"] }
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "tracing", "fmt", "registry"] }
twitch_api = { version = "0.7.0-rc.8", features = [ "reqwest", "helix", "eventsub", "hmac", "tracing"] }
twitch_oauth2 = { version ="0.14.0", features= [ "client", "reqwest"] }
twitch_types = "0.4.6"
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v7", "rng", "v4"] }
webbrowser = "1.0.2"


[dev-dependencies]
rstest = "0.23.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
